fix alignment

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   color: grey;
   padding-top: 2.1vh;
   padding-bottom: 2.1vh;
-  padding-left: 8vw;
+  padding-left: 7.5vw;
   gap: 2.5vw;
   display: flex;
   align-items: center;
@@ -31,36 +31,38 @@ img {
   width: 100%;
 }
 .main {
-  margin-left: 8vw;
-  margin-right: 8vw;
+  margin-left: 7.5vw;
+  margin-right: 7.5vw;
   margin-top: 32px;
 }
 .sections {
   display: flex;
-  gap: 3vw;
+  gap: 2vw;
 }
 .section1 {
   width: 70%;
 }
 .section2 {
-  width: 30%;
+  width: 33%;
 }
 .blogsearch {
   border: 1.8px solid rgb(231, 231, 233);
-  padding: 21px 2vw 18px 2vw;
+  padding: 29px 1.5vw 18px 1.5vw;
   background-color: #f5f5f5;
   border-radius: 3px;
 }
 .blogcategories,
 .sidewidgetwell {
   border: 1.8px solid rgb(231, 231, 233);
-  padding: 21px 2vw 22px 2vw;
+  padding: 29px 0 30px 1.5vw;
   background-color: #f5f5f5;
   border-radius: 3px;
 }
 .categoryname {
   display: flex;
-  justify-content: space-between;
+}
+.categoryname2{
+  margin: auto;
 }
 .searchbar {
   display: flex;
@@ -135,11 +137,13 @@ h2 {
   }
   .postdate,
   .loremsection1,
-  .categoryname1,
-  .categoryname2,
   .loremsection2,
   .copyright {
     font-size: 20px;
+  }
+  .categoryname1,
+  .categoryname2{
+    font-size: 19px;
   }
   .biglorem {
     font-size: 27px;
@@ -148,6 +152,13 @@ h2 {
   h2 {
     font-size: 25px;
     font-weight: 500;
+  }
+  .blogsearch {
+    padding: 33px 1.5vw 22px 1.5vw;
+  }
+  .blogcategories,
+  .sidewidgetwell {
+    padding: 33px 0 34px 1.5vw;
   }
   
 }
@@ -168,11 +179,13 @@ h2 {
   }
   .postdate,
   .loremsection1,
-  .categoryname1,
-  .categoryname2,
   .loremsection2,
   .copyright {
     font-size: 16px;
+  }
+  .categoryname1,
+  .categoryname2{
+    font-size: 15px;
   }
   .biglorem {
     font-size: 22px;
@@ -181,6 +194,13 @@ h2 {
   h2 {
     font-size: 21px;
     font-weight: 500;
+  }
+  .blogsearch {
+    padding: 31px 1.5vw 20px 1.5vw;
+  }
+  .blogcategories,
+  .sidewidgetwell {
+    padding: 31px 0 32px 1.5vw;
   }
 }
 @media only screen and (min-width: 1023px) and (max-width: 1404px) {
@@ -200,11 +220,13 @@ h2 {
   }
   .postdate,
   .loremsection1,
-  .categoryname1,
-  .categoryname2,
   .loremsection2,
   .copyright {
     font-size: 14px;
+  }
+  .categoryname1,
+  .categoryname2{
+    font-size: 13px;
   }
   .biglorem {
     font-size: 18px;
@@ -213,6 +235,13 @@ h2 {
   h2 {
     font-size: 17px;
     font-weight: 500;
+  }
+  .blogsearch {
+    padding: 29px 1.5vw 18px 1.5vw;
+  }
+  .blogcategories,
+  .sidewidgetwell {
+    padding: 29px 0 30px 1.5vw;
   }
 }
 @media only screen and (min-width: 641px) and (max-width: 1022px) {
@@ -252,6 +281,13 @@ h2 {
   button{
     padding: 4px 8px;
   }
+  .blogsearch {
+    padding: 15px 1.5vw 12px 1.5vw;
+  }
+  .blogcategories,
+  .sidewidgetwell {
+    padding: 15px 0 16px 1.5vw;
+  }
 }
 @media only screen and (min-width: 427px) and (max-width: 641px) {
   .layout {
@@ -287,11 +323,22 @@ h2 {
     font-size: 8px;
     font-weight: 500;
   }
-  .categoryname {
-    display: block;
-  }
   button{
     padding: 3px 8px;
+  }
+  .blogsearch {
+    padding: 10px 1.5vw 7px 1.5vw;
+  }
+  .blogcategories,
+  .sidewidgetwell {
+    padding: 10px 0 9px 1.5vw;
+  }
+  .copyright{
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+  .hr3{
+    margin-top: 20px;
   }
 }
 @media only screen and (max-width: 426px) {
@@ -355,11 +402,11 @@ h2 {
     margin-top: 10px;
     margin-bottom: 10px;
   }
-  .categoryname2{
-    margin-left: 0;
+  .blogsearch {
+    padding: 10px 1.5vw 7px 1.5vw;
   }
-  .categoryname{
-    display: block;
+  .blogcategories,
+  .sidewidgetwell {
+    padding: 10px 0 9px 1.5vw;
   }
-
 }
